# openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Hugging Face Transformers Service",
     "description": "This **Local LLM server** application is a Windows service application designed to provide an interface for working with Hugging Face models, specifically catering to translation and text generation tasks.",
-    "version": "1.0.11"
+    "version": "1.1.0"
   },
   "paths": {
     "/v1/model/directory": {
@@ -445,84 +445,6 @@
         }
       }
     },
-    "/v1/completions": {
-      "post": {
-        "summary": "Generate Text Completion",
-        "description": "Generate text based on the input prompt using the specified text generation model.",
-        "operationId": "completions_v1_completions_post",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CompletionRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CompletionResponse"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/v1/chat/completions": {
-      "post": {
-        "summary": "Generate Chat Completion",
-        "description": "Generate chat-style completion using the specified text generation model.",
-        "operationId": "chat_completions_v1_chat_completions_post",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ChatCompletionRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ChatCompletionResponse"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/v1/model/info": {
       "get": {
         "summary": "Retrieve model info",
@@ -635,436 +557,6 @@
   },
   "components": {
     "schemas": {
-      "ChatCompletionChoice": {
-        "properties": {
-          "message": {
-            "$ref": "#/components/schemas/ChatMessage"
-          },
-          "index": {
-            "type": "integer",
-            "title": "Index"
-          },
-          "finish_reason": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Finish Reason"
-          }
-        },
-        "type": "object",
-        "required": [
-          "message",
-          "index"
-        ],
-        "title": "ChatCompletionChoice"
-      },
-      "ChatCompletionRequest": {
-        "properties": {
-          "model_name": {
-            "type": "string",
-            "title": "Model Name",
-            "description": "Name of the chat model to use."
-          },
-          "messages": {
-            "items": {
-              "$ref": "#/components/schemas/ChatMessage"
-            },
-            "type": "array",
-            "title": "Messages",
-            "description": "List of messages in the conversation."
-          },
-          "max_tokens": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Max Tokens",
-            "description": "Maximum number of tokens to generate.",
-            "default": 500
-          },
-          "temperature": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Temperature",
-            "description": "Sampling temperature.",
-            "default": 0.7
-          },
-          "top_p": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Top P",
-            "description": "Nucleus sampling probability.",
-            "default": 1.0
-          },
-          "n": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "N",
-            "description": "Number of completions to generate.",
-            "default": 1
-          },
-          "stop": {
-            "anyOf": [
-              {
-                "items": {
-                  "type": "string"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Stop",
-            "description": "Sequences where the API will stop generating further tokens."
-          },
-          "response_type": {
-            "$ref": "#/components/schemas/ResponseType",
-            "description": "Type of response: 'choices' or 'assistant'.",
-            "default": "choices"
-          }
-        },
-        "type": "object",
-        "required": [
-          "model_name",
-          "messages"
-        ],
-        "title": "ChatCompletionRequest",
-        "example": {
-          "max_tokens": 100,
-          "messages": [
-            {
-              "content": "You are a helpful assistant.",
-              "role": "system"
-            },
-            {
-              "content": "Tell me a joke.",
-              "role": "user"
-            }
-          ],
-          "model_name": "gpt-4",
-          "n": 1,
-          "response_type": "choices",
-          "temperature": 0.7,
-          "top_p": 1.0
-        }
-      },
-      "ChatCompletionResponse": {
-        "properties": {
-          "id": {
-            "type": "string",
-            "title": "Id"
-          },
-          "object": {
-            "type": "string",
-            "title": "Object"
-          },
-          "model": {
-            "type": "string",
-            "title": "Model"
-          },
-          "choices": {
-            "anyOf": [
-              {
-                "items": {
-                  "$ref": "#/components/schemas/ChatCompletionChoice"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Choices"
-          },
-          "generated_text": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Generated Text"
-          }
-        },
-        "type": "object",
-        "required": [
-          "id",
-          "object",
-          "model"
-        ],
-        "title": "ChatCompletionResponse"
-      },
-      "ChatMessage": {
-        "properties": {
-          "role": {
-            "type": "string",
-            "title": "Role",
-            "description": "Role of the message sender (e.g., 'user', 'assistant')."
-          },
-          "content": {
-            "type": "string",
-            "title": "Content",
-            "description": "Content of the message."
-          }
-        },
-        "type": "object",
-        "required": [
-          "role",
-          "content"
-        ],
-        "title": "ChatMessage"
-      },
-      "CompletionChoice": {
-        "properties": {
-          "text": {
-            "type": "string",
-            "title": "Text"
-          },
-          "index": {
-            "type": "integer",
-            "title": "Index"
-          },
-          "logprobs": {
-            "anyOf": [
-              {
-                "additionalProperties": true,
-                "type": "object"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Logprobs"
-          },
-          "finish_reason": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Finish Reason"
-          }
-        },
-        "type": "object",
-        "required": [
-          "text",
-          "index"
-        ],
-        "title": "CompletionChoice"
-      },
-      "CompletionRequest": {
-        "properties": {
-          "model_name": {
-            "type": "string",
-            "title": "Model Name",
-            "description": "Name of the text generation model to use."
-          },
-          "prompt": {
-            "type": "string",
-            "title": "Prompt",
-            "description": "The input text prompt for text generation."
-          },
-          "max_tokens": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Max Tokens",
-            "description": "Maximum number of tokens to generate.",
-            "default": 500
-          },
-          "temperature": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Temperature",
-            "description": "Sampling temperature.",
-            "default": 0.7
-          },
-          "top_p": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Top P",
-            "description": "Nucleus sampling probability.",
-            "default": 1.0
-          },
-          "n": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "N",
-            "description": "Number of completions to generate.",
-            "default": 1
-          },
-          "stop": {
-            "anyOf": [
-              {
-                "items": {
-                  "type": "string"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Stop",
-            "description": "Sequences where the API will stop generating further tokens."
-          },
-          "echo": {
-            "anyOf": [
-              {
-                "type": "boolean"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Echo",
-            "description": "Whether to echo the prompt in the completion.",
-            "default": false
-          },
-          "best_of": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Best Of",
-            "description": "Generates `best_of` completions server-side and returns the best.",
-            "default": 1
-          },
-          "response_type": {
-            "$ref": "#/components/schemas/ResponseType",
-            "description": "Type of response: 'choices' or 'assistant'.",
-            "default": "choices"
-          }
-        },
-        "type": "object",
-        "required": [
-          "model_name",
-          "prompt"
-        ],
-        "title": "CompletionRequest",
-        "example": {
-          "best_of": 1,
-          "echo": false,
-          "max_tokens": 50,
-          "model_name": "gpt-3.5-turbo",
-          "n": 1,
-          "prompt": "Once upon a time,",
-          "response_type": "choices",
-          "stop": [
-            "\n"
-          ],
-          "temperature": 0.7,
-          "top_p": 1.0
-        }
-      },
-      "CompletionResponse": {
-        "properties": {
-          "id": {
-            "type": "string",
-            "title": "Id"
-          },
-          "object": {
-            "type": "string",
-            "title": "Object"
-          },
-          "model": {
-            "type": "string",
-            "title": "Model"
-          },
-          "choices": {
-            "anyOf": [
-              {
-                "items": {
-                  "$ref": "#/components/schemas/CompletionChoice"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Choices"
-          },
-          "generated_text": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Generated Text"
-          }
-        },
-        "type": "object",
-        "required": [
-          "id",
-          "object",
-          "model"
-        ],
-        "title": "CompletionResponse"
-      },
       "DeleteModelResponse": {
         "properties": {
           "message": {
@@ -1594,14 +1086,6 @@
             "tgt_lang": "ita_Latn"
           }
         }
-      },
-      "ResponseType": {
-        "type": "string",
-        "enum": [
-          "choices",
-          "assistant"
-        ],
-        "title": "ResponseType"
       },
       "TranslationRequest": {
         "properties": {
